# CI-MPC-231Aproj

./: .gitignore  animation.py  main.py  pogo.ipynb  pyproject.toml
pogo-stick/: 2D_hopper.py  2D_hopper_v2.py  animation.py  ci-mpc-2D_hopper.py  ci-mpc.py  gemini_8.py  parsing.py  pogo.ipynb  pogo.py  pogo_mpc.ipynb  rho_1.npz
pogo-stick/toy_examples/: 2D_hopper.py  dynamics.py  gemini_6.py  gemini_7.py  main.py  pogo.py
three_link_walker/: readme.md
three_link_walker/matlab/: starter_code.m
three_link_walker/python/: animation.py  controller.py  dynamics.py  main.py  matlab_controller.py
three_link_walker/python/matlab_gen/: Fst_gen.py  Lf2_y_gen.py  Lf_y_gen.py  LgLf_y_gen.py  dpSw_gen.py  dqPlus_gen.py  f_gen.py  g_gen.py  output_y_gen.py  pComLeg1_gen.py  pComLeg2_gen.py  pComTorso_gen.py  pLeg1_gen.py  pLeg2_gen.py  pSt_gen.py  pSw_gen.py  y_gen.py
urdfs/Hound/: Hound_gradient_model.urdf  Hound_model.urdf
urdfs/Hound/urdf/: Hound_point_foot.urdf
urdfs/Hound_new_heavy/: Hound_model.urdf  Hound_model.xml
urdfs/params/: params.yaml  params_back_tumbling.yaml  params_humanoid.yaml  params_raisin.yaml  params_sliding.yaml
